--- a/HTML/7-List_Tag.html
+++ b/HTML/7-List_Tag.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <h1>Lists</h1>
-    <h3>1.Ordered List</h3>
-    <h3>2.Unordered List</h3>
-    <h3>3.Nested List</h3>
-    <h3>4.Description List</h3>
+    <h2>
+        <ul>
+            <li>Ordered List</li>
+            <li>Unordered List</li>
+            <li>Nested List</li>
+            <li>Description List</li>
+        </ul>
+    </h2>
     <h2 style="background-color: green; color: red">-----Ordered List-----</h2>
     <h3>Ordered List(Default):Decimal</h3>
     <ol type="1">
